--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,6 @@
-<form action="Informe seus Dados">
+<form action="" class="form">
 
-  
-    <h1>Inputs</h1>
-
-    <div>
-
-      <i-email> </i-email>
-
-    </div>
+    <h1>Angular - Exercicio 03 - Inputs</h1>
 
     <div>
       <i-number> </i-number>
@@ -15,6 +8,10 @@
 
     <div>
       <i-date> </i-date>
+    </div>
+    
+    <div>
+      <i-email> </i-email>
     </div>
 
 </form>
