--- a/src/app/i-number/i-number.component.html
+++ b/src/app/i-number/i-number.component.html
@@ -1,2 +1,2 @@
-<label for="">Input number </label>
-<input class="number" type="number" name="" id="">
+<label for="number">Input number </label>
+<input type="number">
