--- a/src/app/i-email/i-email.component.html
+++ b/src/app/i-email/i-email.component.html
@@ -1,2 +1,2 @@
-<label for="">Input e-mail </label> 
-<input class="email" type="email">
+<label for="email">Input de e-mail </label> 
+<input type="email" placeholder="Digite aqui seu e-mail">
